--- a/assets/css/stilo.css
+++ b/assets/css/stilo.css
@@ -31,7 +31,7 @@ input{
 
 button{
     height: px;
-    width: auto;
+    width: 100%;
     font-size: 18px ;
     background-color: rgb(7, 68, 68);
     color: #fff;
